<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/profile_cardview_color"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/cardview_radius_0dp"
        app:cardElevation="@dimen/cardview_elevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_profile">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/profile_layout_settings_margin_size"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/profile_pic_card_corner_radius"
                app:cardElevation="@dimen/profilepic_cardview_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/profilepic_cardview_stroke_color"
                app:strokeWidth="@dimen/image_card_stroke_width_size">

                <ImageView
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_pic" />
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_name_margin"
                android:text="@string/John"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/textview_name_text_size"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/profile_want_done_container_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/profile_want_done_container_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_name">

                <TextView
                    android:id="@+id/textview_want"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/want_22"
                    android:textColor="#FFFFFF" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/want_done_divider_margin"
                    android:background="#FFFFFF" />

                <TextView
                    android:id="@+id/textview_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_45"
                    android:textColor="#FFFFFF" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>